@@ -68,7 +68,7 @@ class FocusDataConsistencyTest {
 		Path.of("src/main/resources/assets/attuned/lang/en_us.json");
 
 	private static final Pattern REGISTERED_FOCUS = Pattern.compile(
-		"public\\s+static\\s+final\\s+Item\\s+([A-Z0-9_]+_FOCUS)\\s*=\\s*registerFocus\\(\"([a-z0-9_]+_focus)\"\\);");
+		"registerFocus\\(\\s*\"([a-z0-9_]+_focus)\"\\s*,\\s*item\\s*->\\s*([A-Z0-9_]+_FOCUS)\\s*=\\s*item\\s*\\)");
 	private static final Pattern REGISTERED_BEHAVIOR = Pattern.compile(
 		"register\\(\\s*\"([a-z0-9_/.-]+)\"\\s*,\\s*new\\s+",
 		Pattern.DOTALL);
@@ -133,16 +133,14 @@ class FocusDataConsistencyTest {
 
 		assertEquals(registeredItemsByField.size(), registeredItems.size(),
 			"Registered shipped Focus item ids should not be duplicated");
-		assertTrue(source.contains("public static final List<Item> FOCI = List.copyOf(REGISTERED_FOCI);"),
-			"AttunedContent.FOCI should be derived from registerFocus order, not manually duplicated");
-		assertTrue(source.contains("private static final Set<Item> FOCI_SET = Set.copyOf(REGISTERED_FOCI);"),
-			"AttunedContent should keep constant-time Focus membership alongside the ordered list");
+		assertTrue(source.contains("public static final List<Item> FOCI = Collections.unmodifiableList(REGISTERED_FOCI);"),
+			"AttunedContent.FOCI should expose the deferred registerFocus order, not a manually duplicated list");
 		assertTrue(source.contains("REGISTERED_FOCI.add(item);"),
-			"registerFocus should append every Focus to the public FOCI snapshot");
+			"registerFocus should append every deferred Focus to the public FOCI view");
 		assertTrue(source.contains("public static boolean isFocus(Item item)"),
 			"AttunedContent should expose the canonical Focus item membership check");
-		assertTrue(source.contains("return item != null && FOCI_SET.contains(item);"),
-			"Focus item membership should use the set-backed lookup and reject null safely");
+		assertTrue(source.contains("return item != null && REGISTERED_FOCI.contains(item);"),
+			"Focus item membership should use the deferred Focus list and reject null safely");
 		assertTrue(source.contains("public static boolean isFocus(ItemStack stack)"),
 			"AttunedContent should expose the canonical Focus stack membership check");
 		assertTrue(!source.contains("FOCI = List.of("),
@@ -756,7 +754,7 @@ class FocusDataConsistencyTest {
 		Matcher matcher = REGISTERED_FOCUS.matcher(source);
 		Map<String, String> itemsByField = new TreeMap<>();
 		while (matcher.find()) {
-			itemsByField.put(matcher.group(1), "attuned:" + matcher.group(2));
+			itemsByField.put(matcher.group(2), "attuned:" + matcher.group(1));
 		}
 		assertTrue(!itemsByField.isEmpty(), "Could not find registered Focus item fields in AttunedContent");
 		return itemsByField;
